--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,59 @@
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+# compiled output
+**/dist
+**/tmp
+**/target
+**/cypress/screenshots
+**/cypress/results
+**/generated/xjc
+**/java/META-INF
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# dependencies
+**/node_modules
+**/bower_components
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage/*
+/docs/*
+/eslint-report/*
+*.log
+*.orig
+/out
+.namespace
+!.mvn/wrapper/maven-wrapper.jar
 
 ### IntelliJ IDEA ###
-.idea
+**/.idea
 *.iws
 *.iml
 *.ipr
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+### Eclipse ###
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
 
-### VS Code ###
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+### vscode ###
 .vscode/
+jsconfig.json
